--- a/payment.css
+++ b/payment.css
@@ -60,7 +60,7 @@
   padding: 2%;
 }
 .card {
-  margin-top: 20px;
+  margin: 20px;
   display: flex;
   align-self: center;
   width: 250px;
@@ -91,4 +91,17 @@
 .card .cardType img {
   width: 40px;
   height: 30px;
+}
+button{
+  width: 70px;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  color: blue;
+  font-weight: 700;
+  cursor: pointer;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-self: center;
 }
