--- a/payment.css
+++ b/payment.css
@@ -25,7 +25,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: center;
+  justify-content: space-around;
 }
 .containerPart {
   width: 360px;
