--- a/payment.css
+++ b/payment.css
@@ -19,11 +19,11 @@
 }
 .mainContainer h1 .cart{
   font-size: 25px;
-  position: absolute;
+  position: relative;
+  top: -10px;
+  left: -10px;
   border-radius: 50%;
   background: red;
-  top: 8px;
-  right: 164px;
 }
 
 .container {
